--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -6,6 +6,15 @@
 
 body {
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .flex-banner {
@@ -24,5 +33,16 @@ body {
 
 footer {
     background: linear-gradient(to top, #98C800 5%, transparent);
+    width: 100%;
     height: 100px;
+    padding: 20px;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
 }
+
+@media (min-width: 768px) {
+    footer {
+      position: relative;
+    }
+  }
