--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -9,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Merriweather', serif;
 }
 
 main {
@@ -26,10 +29,51 @@ main {
     width: 50vw;
 }
 
+figcaption a{
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    
+}
+
 .flex-figure {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
+
+.icon {
+    width: 100px;
+    height: 100px;
+    background-image: url(./../images/pumpkin_icon.png);
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center;
+    border-radius: 50%; 
+    margin: 10px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 16px;
+  }
+
+.flex-icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+
+  .icon span {
+    font-size: 14px;
+    margin-top: 110px;
+    color: white;
+    text-align: center;
+  }
 
 footer {
     background: linear-gradient(to top, #98C800 5%, transparent);
@@ -39,10 +83,13 @@ footer {
     box-sizing: border-box;
     position: absolute;
     bottom: 0;
+    transition: all 0.3s ease;
 }
 
 @media (min-width: 768px) {
     footer {
       position: relative;
+      bottom: auto;
+      left: auto;
     }
   }
