--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: black;
+.homePage {
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
