--- a/sprint1/src/styles/CostumeContest.css
+++ b/sprint1/src/styles/CostumeContest.css
@@ -1,15 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
 
+* {
+  margin:0;
+  font-size: 10pt;
+  box-sizing: border-box;
+}
 .costumeContest {
   background-color: #272829;
   background-image: url("../images/v674-aew-55-halloween.jpg");
   background-size:contain;
-  background-repeat:no-repeat;
-  box-sizing: border-box;
+  background-repeat:none;
+  background-position:center;
+  
   color: orange;
   font-size: 60pt;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: space-around;
+  align-content: center;
   text-align: center;
+  font-family: 'Merriweather', serif;
+  width: 100%;
 }
 
+.banner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.banner1 {
+  height: 200px;
+  margin-left:auto;
+  margin-right:auto;
+  display: flex;
+  width: 60%;
+}
+
+.costumePic {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 40%;
+  height: 70%;
+  border-radius: 50%;
+  float: left;
+  margin: 2%;
+}
+
+h3 {
+  font-size: 20pt;
+}
+
+p {
+  font-size: 15pt;
+}
+
+.info {
+  display:inline;
+  /* flex-direction: column; */
+  margin: 0;
+  float:left;
+  /* margin-top: 4%; */
+  /* margin-left: -2%; */
+}
