mals page update

--- a/sprint1/src/styles/CostumeContest.css
+++ b/sprint1/src/styles/CostumeContest.css
@@ -7,7 +7,7 @@
 }
 .costumeContest {
   background-color: #272829;
-  background-image: url("../images/v674-aew-55-halloween.jpg");
+  background-image: url("../images/webBackground.jpg;");
   background-size:contain;
   background-repeat:none;
   background-position:center;
