--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -23,10 +23,16 @@ main {
 .flex-banner {
     display: flex;
     justify-content: center;
+    overflow: hidden;
+}
+
+.flex-banner img {
+    max-width: 100%;
+    height: auto;
 }
 
 .logo {
-    width: 50vw;
+    width: 50%;
 }
 
 figcaption a{
@@ -40,6 +46,11 @@ figcaption a{
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+.flex-figure img {
+    max-width: 100%;
+    height: auto;
 }
 
 .icon {
@@ -56,7 +67,6 @@ figcaption a{
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 16px;
   }
 
 .flex-icons {
@@ -69,7 +79,7 @@ figcaption a{
 
 
   .icon span {
-    font-size: 14px;
+    font-size: 0.8em;
     margin-top: 110px;
     color: white;
     text-align: center;
@@ -91,5 +101,19 @@ footer {
       position: relative;
       bottom: auto;
       left: auto;
+    }
+
+    .icon {
+        width: 80px;
+        height: 80px;
+        font-size: 14px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .icon {
+        width: 60px;
+        height: 60px;
+        font-size: 12px;
     }
   }
