more main page changes

--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -49,7 +49,7 @@ figcaption a{
 }
 
 .flex-figure img {
-    max-width: 100%;
+    max-width: 80%;
     height: auto;
 }
 
@@ -96,6 +96,21 @@ footer {
     transition: all 0.3s ease;
 }
 
+@media(min-width: 1200px) {
+    .flex-figure img {
+        max-width: 70%;
+    }
+
+    .icon {
+        width: 120px;
+        height: 120px;
+    }
+
+    .icon span {
+        font-size: 18px;
+    }
+}
+
 @media (min-width: 768px) {
     footer {
       position: relative;
@@ -106,6 +121,9 @@ footer {
     .icon {
         width: 80px;
         height: 80px;
+        
+    }
+    .icon span {
         font-size: 14px;
     }
   }
@@ -114,6 +132,10 @@ footer {
     .icon {
         width: 60px;
         height: 60px;
-        font-size: 12px;
+        
     }
+
+   .icon span {
+    font-size: 12px;
+   }
   }
