--- a/sprint1/src/styles/CostumeContest.css
+++ b/sprint1/src/styles/CostumeContest.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap");
 
 * {
-  margin:0;
+  margin: 0;
   font-size: 10pt;
   box-sizing: border-box;
 }
 .costumeContest {
   background-color: #272829;
   background-image: url("../images/webBackground.jpg");
-  background-size:contain;
-  background-repeat:none;
-  background-position:center;
+  background-size: contain;
+  background-repeat: none;
+  background-position: center;
   color: orange;
   font-size: 60pt;
   display: flex;
@@ -18,7 +18,7 @@
   justify-content: center;
   align-content: center;
   text-align: center;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   width: 100%;
 }
 
@@ -30,8 +30,8 @@
 }
 
 .banner1 {
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   width: 60%;
   height: auto;
@@ -59,40 +59,39 @@ h3 {
   font-size: 20pt;
   position: relative;
   left: 10px;
-  font-size: 20pt; 
+  font-size: 20pt;
 }
 p {
   font-size: 15pt;
 }
 
 .info {
-  display:inline;
+  display: inline;
   margin: 0;
-  float:left;
-
-};
+  float: left;
+}
 
 .myButton {
-	box-shadow:inset 0px 1px 0px 0px #f9eca0;
-	background:linear-gradient(to bottom, #ffb254 5%, #f5793f 100%);
-	background-color:#ffb254;
-	border-radius:6px;
-	border:2px solid #030303;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-family:Courier New;
-	font-size:21px;
-	font-weight:bold;
-	padding:8px 28px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ded17c;
+  box-shadow: inset 0px 1px 0px 0px #f9eca0;
+  background: linear-gradient(to bottom, #ffb254 5%, #f5793f 100%);
+  background-color: #ffb254;
+  border-radius: 6px;
+  border: 2px solid #030303;
+  display: inline-block;
+  cursor: pointer;
+  color: #000000;
+  font-family: Courier New;
+  font-size: 21px;
+  font-weight: bold;
+  padding: 8px 28px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ded17c;
 }
 .myButton:hover {
-	background:linear-gradient(to bottom, #f5793f 5%, #ffb254 100%);
-	background-color:#f5793f;
+  background: linear-gradient(to bottom, #f5793f 5%, #ffb254 100%);
+  background-color: #f5793f;
 }
 .myButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
