--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -4,14 +4,23 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Merriweather', serif;
 }
 
 .homePage {
-    background-color: #000000;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     min-height: 100vh;
+    background-color: #000000;
+    justify-content: space-around;
+}
+
+.main-section {
+    display: flex;
     font-family: 'Merriweather', serif;
+    flex-wrap: nowrap;
+    background-color: #000000;
+    justify-content: space-evenly;
 }
 
 main {
@@ -24,11 +33,17 @@ main {
     display: flex;
     justify-content: center;
     overflow: hidden;
+    z-index: 2;
+    position: relative;
+    /* margin-bottom: -15%;*/
+    width: 100%;
+    flex-direction: row;
 }
 
 .flex-banner img {
-    max-width: 100%;
-    height: auto;
+    width: 60%;
+    height: 200px;
+    margin-top:2%;
 }
 
 .logo {
@@ -42,26 +57,35 @@ figcaption a{
     
 }
 
+.figure {
+    display: flex;
+    text-align: center;
+    z-index: 1;
+    position: relative;
+    
+}
 .flex-figure {
     display: flex;
-    justify-content: center;
     text-align: center;
+    z-index: 1;
+    position: relative;
+    height:min-content;
 }
 
 .flex-figure img {
-    max-width: 80%;
-    height: auto;
+    width: 70%;
+    max-height: 90%;
+    margin-top: -19%;
 }
 
 .icon {
-    width: 100px;
-    height: 100px;
-    background-image: url(./../images/pumpkin_icon.png);
+    width: 200px;
+    height: 200px;
+    background-image: url(./../images/Pump.gif);
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center;
-    border-radius: 50%; 
-    margin: 10px; 
+    border-radius: 50%;  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,10 +95,10 @@ figcaption a{
 
 .flex-icons {
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     justify-content: center;
-    align-items: center;
     position: relative;
+    
   }
 
 
@@ -98,7 +122,7 @@ footer {
 
 @media(min-width: 1200px) {
     .flex-figure img {
-        max-width: 70%;
+        max-width: 80%;
     }
 
     .icon {
