--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -112,9 +112,6 @@ figcaption a{
         height: 100px;
     }
 
-    .icon span {
-        font-size: 18px;
-    }
 }
 
 @media (min-width: 768px) {
@@ -129,9 +126,6 @@ figcaption a{
         height: 100px;
         
     }
-    .icon span {
-        font-size: 14px;
-    }
   }
 
   @media (max-width: 480px) {
@@ -140,10 +134,6 @@ figcaption a{
         height: 100px;
         
     }
-
-   .icon span {
-    font-size: 12px;
-   }
   }
 
   .footer {
@@ -158,6 +148,7 @@ figcaption a{
   }
 
 .words {
-    height: 18pt;
-    float: below;
+    height: 22pt;
+    margin: 10px;
+    display: block;
 }
