--- a/sprint1/src/styles/CostumeContest.css
+++ b/sprint1/src/styles/CostumeContest.css
@@ -29,6 +29,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: fixed;
+  top:0;
+  z-index: 10;
 }
 
 .banner1 {
@@ -37,6 +40,7 @@
   display: flex;
   width: 60%;
   height: auto;
+  z-index: 1;
 }
 .costume-item {
   display: flex;
@@ -63,6 +67,7 @@ h3 {
   position: relative;
   left: 10px;
   font-size: 20pt;
+  z-index: 1;
 }
 p {
   font-size: 15pt;
@@ -72,6 +77,7 @@ p {
   display: inline;
   margin: 0;
   float: left;
+  z-index: 1;
 }
 
 .myButton {
@@ -99,10 +105,11 @@ p {
   top: 1px;
 }
 
-/* .portrait {
-  height: 40%;
+.costumePic,
+.portrait img {
+  height: 30%;
 }
-
-.lanscape {
+.costumePic,
+.lanscape img {
   width: 40%;
-} */
+}
