--- a/sprint1/src/styles/homepage.css
+++ b/sprint1/src/styles/homepage.css
@@ -15,22 +15,20 @@
     background-image: url("../images/9427456_4164970.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    overflow:scroll;
+    overflow-y: scroll;
+    overflow-x: auto;
 }
 
 .main-section {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     font-family: 'Merriweather', serif;
     flex-wrap: nowrap;
     justify-content: space-evenly;
-    height: 1100px;
+    height: auto;
 }
 
-main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
 
 .flex-banner {
     display: flex;
@@ -88,6 +86,8 @@ figcaption a{
     justify-content: center;
     color: white;
     margin: 3px;
+    width: 100px;
+    height: 100px;
   }
 
 .flex-icons {
@@ -101,14 +101,14 @@ figcaption a{
     
   }
 
-@media(min-width: 1200px) {
-    .flex-figure img {
-        max-width: 90%;
+@media (max-width: 768px) {
+    .icon {
+        width: 40px;
+        height: 40px;
     }
 
-    .icon {
-        width: 100px;
-        height: 100px;
+    .flex-icons {
+        margin: 10px;
     }
 
 }
@@ -127,22 +127,14 @@ figcaption a{
     }
   }
 
-  @media (max-width: 480px) {
-    .icon {
-        width: 100px;
-        height: 100px;
-        
-    }
-  }
-
-  .footer {
+.footer {
     width: 100%;
     position: absolute;
     bottom: 0;
     
   }
 
-  .footer img {
+.footer img {
     margin-top: -80%;
     z-index: 1;
   }
@@ -153,34 +145,13 @@ figcaption a{
     display: block;
 }
 
-.toTop {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    color: white;
-    padding: 10px 20px;
-    
-}
-.toTop::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Place the glow behind the image */
-    background-color: #a1c718cb; /* Change this to the desired glow color */
-    border-radius: 50%; /* Makes it a circle */
-    box-shadow: 0 0 20px 20px #a1c718cb; 
-  }
-
-  .topPic {
+.topPic {
     width: 100px;
     height: 200px;
     transition: box-shadow 0.3s; /* Add a smooth transition effect */
     z-index: -1;
   }
 
-  .topPic:hover {
+.topPic:hover {
     box-shadow: 0 0 20px rgba(0, 255, 26, 0.7); 
 }
