--- a/sprint1/src/styles/GameStyle.css
+++ b/sprint1/src/styles/GameStyle.css
@@ -33,6 +33,31 @@
   transform: translate(-50%, -50%);
 }
 
+.iconContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-47%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.iconRow {
+  display: flex;
+  justify-content: center;
+}
+.iconGhost {
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+}
+
+.iconPump {
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+}
 .gameOver {
   font-family: "pixelify Sans", sans-serif;
   position: fixed;
